--- a/.github/workflows/mjr.yaml
+++ b/.github/workflows/mjr.yaml
@@ -23,5 +23,6 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: [job1]
+    if: ${{ needs.job1.result == 'success' || needs.job1.result == 'failure' }}
     steps:
       - run: echo '${{ needs.job1.result }}'
